syntax = "proto3";

package order;
option go_package = "./pb";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order) {}
  rpc GetOrder(GetOrderRequest) returns (Order) {}
  rpc GetUserOrders(GetUserOrdersRequest) returns (ListOrdersResponse) {}
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (Order) {}
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse) {}
}

message OrderItem {
  string id = 1;
  string order_id = 2;
  string product_id = 3;
  int32 quantity = 4;
  double price = 5;
  Product product = 6;
}

message Product {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message Order {
  string id = 1;
  string user_id = 2;
  string status = 3;
  double total_price = 4;
  string created_at = 5;
  repeated OrderItem items = 6;
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItemRequest items = 2;
}

message OrderItemRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message GetOrderRequest {
  string id = 1;
}

message GetUserOrdersRequest {
  string user_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message ListOrdersResponse {
  repeated Order orders = 1;
  int32 total = 2;
}

message UpdateOrderStatusRequest {
  string id = 1;
  string status = 2;
}

message CancelOrderRequest {
  string id = 1;
}

message CancelOrderResponse {
  bool success = 1;
}